# c2m-api-v2-postman

./: .env.example  .gitignore  .gitignore-updated  .redocly.yaml  .spectral.yml  BUILD-GUIDE.md  BUILD_PIPELINE_COMPARISON.md  CI_CD_OPERATIONS_GUIDE.md  CLAUDE.md  COMPLETE_BUILD_GUIDE.md  CONTRIBUTING.md  DUAL_REPO_MIGRATION_COMPLETE.md  ENABLE_ACTIONS_BOTH_REPOS.md  ENABLE_GITHUB_ACTIONS.md  JWT_AUTHENTICATION_README.md  JWT_IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.backup-20250907-221815  Makefile.bak0724202521239  Makefile_README.md  Makefile_V14  POSTMAN_COLLECTIONS_GUIDE.md  PROJECT_TODO.md  QUICKSTART.md  README.md  README_NEW.md  REPOSITORY_GUIDE.md  TEMPLATE_ENDPOINTS_QUICKSTART.md  TEST_DATA_ARCHITECTURE.md  UNUSED_SCRIPTS_ANALYSIS.md  VALIDATION_CI_CD_INTEGRATION.md  VALIDATION_GAP_ANALYSIS.md  VALIDATION_IMPLEMENTATION_PLAN.md  VALIDATION_SUMMARY.md  VALIDATION_SYSTEM_COMPLETE.md  VALIDATION_TESTING_GUIDE.md  VALIDATION_TESTING_SUMMARY.md  WORKSPACE_AUTO_DETECTION_COMPLETE.md  c2m_openapi_public.yml  claudeAddGithubPipeline.txt  (+27 more)
finspect/: .gitignore  Dockerfile  FILE_TYPE_DETECTION_METHODS.md  LICENSE  README.md  file-type-detection-methods.md  pyproject.toml  setup.py
finspect/finspect/: __init__.py  cli.py  detect.py  limits.py  models.py  output.py  zipscan.py
finspect/frank-tests/: Fresh_to_Dried_Herb_Conversion_Table.csv  How to Remove Adobe DRM From ePub and PDF eBooks.epub  IMG_2817.HEIC  LLM-Factory_Guide.md  TEI Arch Overview v 2.ppt  Workout_Planner_HeaderRows.xlsx  f.txt  googleapi.rtf  webp2jpg.bsh  workout-log-template-1.docx
finspect/tests/: __init__.py  create_fixtures.py  test_cli.py  test_detect.py
finspect/tests/fixtures/: finspect_report_20250823_213205.html  finspect_report_20250823_213205.json  sample.json  sample.rtf  sample.txt  sample.xml
(+2411 files in other folders)
